--- a/.mise.toml
+++ b/.mise.toml
@@ -1,5 +1,5 @@
 [tools]
-python = "3.11.4" # [optional] will be used for the venv
+python = "3.9"
 
 [env]
 _.python.venv = { path = ".venv", create = true } # create the venv if it doesn't exist
