Revert "fixing things"
This reverts commit 9f1b719366d67a6f85de0e510ae9f3566d4dfa14.

--- a/.mise.toml
+++ b/.mise.toml
@@ -1,5 +1,5 @@
 [tools]
-python = "3.9"
+python = "3.11.4" # [optional] will be used for the venv
 
 [env]
 _.python.venv = { path = ".venv", create = true } # create the venv if it doesn't exist
